--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2022-07-14  Jose E. Marchesi  <jemarch@gnu.org>
+
+	* libpoke/pkl-ast.h: Update comments.
+	* libpoke/pkl-trans.c: Remove obsolete comments.
+	* etc/hacking.org (exp): New section.
+	(cond_exp): Likewise.
+
 2022-07-14  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>
 
 	* libpoke/pkl-trans.c (pkl_trans1_pr_comp_stmt): Merge common parts
