--- a/HACKING
+++ b/HACKING
@@ -72,8 +72,10 @@ _________________
 .. 1. Compiler Overview
 .. 2. The bison Parser in pkl-tab.y
 .. 3. The AST
-..... 1. Loop Statements
-..... 2. try Statements
+..... 1. loop_stmt
+..... 2. try_stmt
+..... 3. exp
+..... 4. cond_exp
 .. 4. Compiler Passes and Phases
 ..... 1. Naming Conventions for Phases
 ..... 2. Naming Conventions for Handlers
@@ -1205,12 +1207,12 @@ with GNU poke.  If not, see <https://www.gnu.org/licenses/>.
 ~~~~~~~~~~~~
 
   The compiler operates on an abstract syntax tree that represent the
-  program being compiled.  The following subsections discuss some
+  program being compiled.  The following subsections discuss some useful
   aspects of the structure of the AST.
 
 
-11.3.1 Loop Statements
-----------------------
+11.3.1 loop_stmt
+----------------
 
   Loop statements are represented with trees like:
 
@@ -1306,8 +1308,8 @@ with GNU poke.  If not, see <https://www.gnu.org/licenses/>.
   `----
 
 
-11.3.2 try Statements
----------------------
+11.3.2 try_stmt
+---------------
 
   There are several syntactic forms of this statement:
 
@@ -1335,6 +1337,80 @@ with GNU poke.  If not, see <https://www.gnu.org/licenses/>.
 
 
   where ARG and EXP are exclusive.
+
+
+11.3.3 exp
+----------
+
+  Expressions are the application of some *operator* to one or more
+  *operators*.  The Poke language supports unary, binary and ternary
+  operators.
+
+  Expressions are represented with trees like:
+
+  ,----
+  | exp
+  | |
+  | +-- code
+  | +-- attr
+  | +-- flag
+  | +-- numops
+  | +-- operands[3]
+  |     |
+  |     +-- [operand]
+  |     +-- [operand]
+  |     +-- [operand]
+  `----
+
+
+  Where `code' identifies the operator of the expression.  Operators are
+  defined in the `libpoke/pkl-ops.def' file.
+
+  If the operator is an attribute, then `attr' identifies the invoked
+  attribute.  Attributes are defined in the `libpoke/pkl-attrs.def'
+  file.  This field `attr' is initialized in the `trans1' phase.
+
+  The `exp' AST node is used for all the Poke unary and binary
+  operators, which only use two of the `operands'.
+
+  Additionally, the application of an attribute to which an argument is
+  passed, like in:
+
+  ,----
+  | foo'elem (1)
+  `----
+
+
+  is encoded as an `exp' node with three operands: the first operand
+  holds `foo', the second operand an identifier for the attribute `elem'
+  and the third operand the expression passed to the attribute (in this
+  case `1').  A handler in `trans1' transforms this ternary expression
+  node in a binary expression, filling `attr' in the process.
+
+  Note that the Poke ternary conditional operator `? :' is *not*
+  implemented using `exp' nodes, but `cond_exp' AST nodes.
+
+
+11.3.4 cond_exp
+---------------
+
+  This AST node is used to encode Poke's ternary conditional operator,
+  which looks like:
+
+  ,----
+  | cond_exp ? then_exp : else_exp
+  `----
+
+
+  It uses trees like this:
+
+  ,----
+  | cond_exp
+  | |
+  | +-- cond
+  | +-- thenexp
+  | +-- elseexp
+  `----
 
 
 11.4 Compiler Passes and Phases
