--- a/HACKING
+++ b/HACKING
@@ -1324,9 +1324,12 @@ with GNU poke.  If not, see <https://www.gnu.org/licenses/>.
   | |   |
   | |   +-- code
   | |
+  | +-- try_stmt_handler
+  | |   |
+  | |   +-- code
+  | |
   | +-- [arg]
   | +-- [exp]
-  | +-- handler
   `----
 
 
