--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2022-07-15  Jose E. Marchesi  <jemarch@gnu.org>
+
+	* etc/hacking.org (Building with Debugging support): Recommend
+	CFLAGS="-O0 -g3" for debugging.
+
 2022-07-14  Jose E. Marchesi  <jemarch@gnu.org>
 
 	* libpoke/pkl-ast.h: Update comments.
