poke: make the :to argument to the `extract' command optional
2022-07-16  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-extract.pk (extract): Make `to' optional and report the
	IOS where the value got extracted.
	* doc/poke.texi (extract): Update accordingly.

--- a/doc/poke.texi
+++ b/doc/poke.texi
@@ -8962,13 +8962,17 @@ memory IO space with the contents of a mapped value.
 This command has the following synopsis.
 
 @example
-extract :val @var{val} :to @var{ios_name}
+extract :val @var{val} [:to @var{ios_name}]
 @end example
 
 @noindent
 Where @code{:val} is a mapped value, and @var{:to} is the name of the
 memory IOS to create (or use).  The contents of @var{value} are copied
 to the beginning of the memory IOS @code{*@var{ios_name}*}.
+
+If no @var{:to} argument is specified, or if it is the empty string,
+then the @command{extract} command will generate a suitable unique
+name and use it.
 
 @node scrabble
 @section @command{scrabble}
