--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2022-07-16  Jose E. Marchesi  <jemarch@gnu.org>
+
+	* poke/pk-extract.pk (extract): Make `to' optional and report the
+	IOS where the value got extracted.
+	* doc/poke.texi (extract): Update accordingly.
+
 2022-07-15  Jose E. Marchesi  <jemarch@gnu.org>
 
 	* etc/hacking.org (Building with Debugging support): Recommend
