doc: add an example of qsort comparator function to the manual
2022-07-19  Jose E. Marchesi  <jemarch@gnu.org>

	* doc/poke.texi (qsort): Add example of a comparator function for
	qsort and fix comparator prototype.

--- a/doc/poke.texi
+++ b/doc/poke.texi
@@ -14928,8 +14928,27 @@ The comparator function @var{cmp_f} should have the following
 prototype:
 
 @example
-type Comparator = (any,any):int
+type Comparator = (any,any)int<32>;
 @end example
+
+@noindent
+for example:
+
+@example
+fun CompareInts = (any a, any b) int<32>:
+@{
+  var ai = a as int<32>;
+  var bi = b as int<32>;
+
+  if (ai == bi)
+    return 0;
+  else if (ai > bi)
+    return 1;
+  else
+    return -1;
+@}
+@end example
+
 
 @node CRC Functions
 @section CRC Functions
