--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2022-07-19  Jose E. Marchesi  <jemarch@gnu.org>
 
+	* doc/poke.texi (qsort): Add example of a comparator function for
+	qsort and fix comparator prototype.
+
+2022-07-19  Jose E. Marchesi  <jemarch@gnu.org>
+
 	* libpoke/pkl-tab.y (declaration): Move annotation of function
 	names to trans1.
 	* libpoke/pkl-trans.c (pkl_trans1_pr_decl): Annotate declared
