doc: add `.set pager yes' to the list of recommended options for new users
2022-07-19  Jose E. Marchesi  <jemarch@gnu.org>

	* doc/poke.texi (Simple Init File): Add `.set pager yes' to the
	set of recommended options for new users and explain all the
	options a little.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2022-07-19  Jose E. Marchesi  <jemarch@gnu.org>
 
+	* doc/poke.texi (Simple Init File): Add `.set pager yes' to the
+	set of recommended options for new users and explain all the
+	options a little.
+
+2022-07-19  Jose E. Marchesi  <jemarch@gnu.org>
+
 	* poke/pk-scrabble.pk (Arguments): Move variable declaration out
 	of loop to avoid extra allocations.
 
